--- a/api-design/package.json
+++ b/api-design/package.json
@@ -5,18 +5,25 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "@types/jest": "^29.2.5",
+    "@types/supertest": "^2.0.12",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "jest": "^29.3.1",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
+    "lodash.merge": "^4.6.2",
+    "morgan": "^1.10.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
